apps/monitoring/ingress-ext.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ext
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth-basic-ext@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - grafana.ext.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: grafana.ext.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ext
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth-basic-ext@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - prometheus.ext.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: prometheus.ext.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
